# FlagFFT

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  fft_mixed_radix_tle.py  flagfft.py  pyproject.toml
.agents/: 2026-05-27-1912-合并1d-test并适配adaptor.md  2026-05-29-231609-提交pytest插件配置调整.md  20260520-231815-regression-tests-and-coverage.md
.github/workflows/: correctness-test.yml  linter.yml
benchmark/: __init__.py  bench_vs_cufft.cpp  benchmark_fft_mixed_radix.py  conftest.py  report.py  suites.py  test_bench.py  test_bench_full.py  test_bench_smoke.py  test_bench_vs_cufft.py  tune_fft_plans.py
benchmark/utils/: __init__.py  collector.py  defaults.py  pytest_plugin.py  report.py  suites.py
conf/: operators.yaml  test_matrix.yaml
ctest/: CMakeLists.txt  flagfft_test.h  main.cpp  test_2d_correctness.cpp  test_exec_c2c.cpp  test_exec_c2c_fwd_bs_b.cpp  test_exec_c2c_fwd_bs_s.cpp  test_exec_c2c_fwd_ct_b.cpp  test_exec_c2c_fwd_ct_s.cpp  test_exec_c2c_inv_bs_b.cpp  test_exec_c2c_inv_bs_s.cpp  test_exec_c2c_inv_ct_b.cpp  test_exec_c2c_inv_ct_s.cpp  test_exec_c2r.cpp  test_exec_c2r_bs_b.cpp  test_exec_c2r_bs_s.cpp  test_exec_c2r_ct_b.cpp  test_exec_c2r_ct_s.cpp  test_exec_d2z.cpp  test_exec_d2z_bs_b.cpp  test_exec_d2z_bs_s.cpp  test_exec_d2z_ct_b.cpp  test_exec_d2z_ct_s.cpp  test_exec_d2z_z2d.cpp  test_exec_d2z_z2d_bs_b.cpp  test_exec_d2z_z2d_bs_s.cpp  test_exec_d2z_z2d_ct_b.cpp  test_exec_d2z_z2d_ct_s.cpp  test_exec_r2c.cpp  test_exec_r2c_bs_b.cpp  test_exec_r2c_bs_s.cpp  test_exec_r2c_c2r.cpp  test_exec_r2c_c2r_bs_b.cpp  test_exec_r2c_c2r_bs_s.cpp  test_exec_r2c_c2r_ct_b.cpp  test_exec_r2c_c2r_ct_s.cpp  test_exec_r2c_ct_b.cpp  test_exec_r2c_ct_s.cpp  test_exec_z2d.cpp  test_exec_z2d_bs_b.cpp  (+13 more)
ctest/backend/: CMakeLists.txt
ctest/backend/cuda/: adaptor.cpp
ctest/backend/null/: adaptor.cpp
ctests/: flagfft_c_api_test.cpp
docker/: Dockerfile  Dockerfile.ci  Dockerfile.dev
docs/: architecture.md  tle.md
docs/opt/: 2d-fft-optimization.md
docs/superpowers/issues/: 2026-05-27-1d-fft-test-failures.md
docs/superpowers/plans/: 2026-05-26-1d-fft-test-refactor.md  2026-05-26-benchmark-refactor.md  2026-05-27-cli-refactor-plan.md  2026-05-27-ctest-pytest-integration.md  2026-05-28-benchmark-restructure.md
docs/superpowers/specs/: 2026-05-26-1d-fft-test-refactor-design.md  2026-05-26-benchmark-refactor-design.md  2026-05-27-cli-refactor-design.md  2026-05-27-ctest-pytest-integration-design.md  2026-05-28-benchmark-restructure-design.md  2026-05-29-2d-fft-design.md  2026-06-09-unified-test-runner-design.md
include/: flagfft.h
include/flagfft/: flagfft.h
packaging/debian/: changelog  control  copyright  libflagfft-nvidia.install  rules
packaging/debian/build-helpers/: Dockerfile.deb  build-flagfft.sh
packaging/rpm/: build-flagfft-rpm.sh
packaging/rpm/dockerfiles/: Dockerfile.rpm
packaging/rpm/specs/: flagfft.spec
python/codelet/: radix13.py  radix16.py  radix3.py  radix6.py  radix8.py
python/flagfft_codegen/: __init__.py  jit_source.py  kernels.py
python/flagfft_codegen/codelet/: radix10.py  radix11.py  radix12.py  radix13.py  radix15.py  radix16.py  radix17.py  radix19.py  radix2.py  radix3.py  radix4.py  radix5.py  radix6.py  radix7.py  radix8.py  radix9.py  utils.py
src/: __init__.py  api.py  exec.py  fft_mixed_radix_tle.py  flagfft.py  flagfft_tune.py  plan.py  triton_aot.py  tuning.py
src/adaptor/: CMakeLists.txt  adaptor.h  test_adaptor.h
src/adaptor/backend/cuda/: adaptor.cpp  test_adaptor.cpp
src/cli_tools/bench/: report.cpp  report.hpp  runner.cpp  runner.hpp
src/cli_tools/common/: case.cpp  case.hpp  cli_utils.cpp  cli_utils.hpp  plan_handles.cpp  plan_handles.hpp  runner.cpp  runner.hpp  runtime_raii.cpp  runtime_raii.hpp
src/cli_tools/flagfft-cli/: main.cpp
src/cli_tools/flagfft-tuner/: bench.cpp  main.cpp  sqlite.cpp  sqlite.hpp
src/cli_tools/tune/: bench.cpp  bench.hpp  driver.cpp  driver.hpp  sqlite.cpp  sqlite.hpp  tune.cpp  tune.hpp
src/codegen/: __init__.py  aot_cache.cpp  compiler.cpp  jit_cache.cpp  jit_kernel.cpp  jit_source.py  kernel_keys.cpp  kernels.py  plan_kernel_keys.cpp  tables.cpp  triton_aot.py
src/codegen/codelet/: radix11.py  radix12.py  radix16.py  radix19.py  radix2.py  radix3.py  radix4.py  radix5.py  radix7.py  radix8.py  utils.py
src/codelet/: __init__.py  radix15.py  radix9.py
src/codelet/triton/: __init__.py  butterfly_constants.py  radix_10.py  radix_11.py  radix_2.py  radix_3.py  radix_4.py  radix_5.py  radix_6.py  radix_7.py  (+2 more)
src/cpp/: flagfft_core.cpp
src/exec/: c_api_exec.cpp  c_api_internal.cpp  c_api_internal.hpp  c_api_plan.cpp  debug_api.cpp  executable_plan.cpp  helpers.cpp  plan_cache.cpp  raw_nodes.cpp  tensor_bluestein.cpp  tensor_four_step.cpp  tensor_leaf.cpp  tuned_plan.cpp
src/plan/: auto_candidates.cpp  builder_context.cpp  cost_model.cpp  factorization.cpp  nodes.cpp  plan_deserialize.cpp  rader_utils.cpp  rader_utils.hpp  tune_candidates.cpp
src/planning/: __init__.py  factorization.py  inspect.py  select.py  serde.py  types.py
src/runtime/: check.hpp  cuda_runtime.cpp  device.hpp  memory.hpp  types.hpp
src/tune/: __init__.py  tune_main.cpp  tune_sqlite.cpp  tuning.py
src/tune_cpp/: tune_bench.cpp  tune_bench.hpp  tune_sqlite.hpp
src/utils/: base.cpp  kernel_key.cpp  plan_json.cpp  plan_key.cpp  problem_key.cpp  request_builder.cpp  serialization.cpp  sqlite_wrapper.cpp  sqlite_wrapper.hpp
test/: test_benchmark_fft_mixed_radix_cli.py  test_cpp_core_fft.py  test_fft_mixed_radix.py  test_tune_fft_plans.py
tests/: __init__.py  conftest.py  test_bench_cli.py  test_benchmark_report.py
tests/cli/: test_flagfft_cli.py
tests/codelet/: test_radix_10_triton.py  test_radix_11_triton.py  test_radix_2_triton.py  test_radix_3_triton.py  test_radix_4_triton.py  test_radix_5_triton.py  test_radix_6_triton.py  test_radix_7_triton.py  test_radix_9_triton.py
tests/ctest/: conftest.py  flagfft_c_api_test.cpp  flagfft_plan_test.cpp  test_correctness.py
tests/python/: test_codegen.py  test_tuning.py
tools/: consts.py  run_tests.py
(+19 files in other folders)
