[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "flagfft"
version = "0.2.1"
description = "C++ cuFFT-style FFT library with Triton/TLE code generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
flagfft-tune = "src.tune.flagfft_tune:main"

[project.optional-dependencies]
test = [
    "pytest",
    "triton",
]
dev = [
    "pytest",
    "triton",
]

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake]
version = ">=3.18"

[tool.scikit-build.cmake.define]
FLAGFFT_BUILD_PYTHON = "OFF"
FLAGFFT_BUILD_TESTS = "OFF"
FLAGFFT_LIBTRITON_JIT_BACKEND = "CUDA"

[tool.scikit-build.ninja]
make-fallback = true

[tool.scikit-build.wheel]
install-dir = ""
