[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flagfft-codegen"
version = "0.2.3"
description = "Python Triton/TLE source generation support for FlagFFT"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["flagfft_codegen*"]

[tool.setuptools.package-data]
flagfft_codegen = ["codelet/*.py"]

[tool.pytest.ini_options]
addopts = "-p benchmark.utils.pytest_plugin"
pythonpath = ["."]
markers = ["bench: performance benchmark tests (require serial execution, use -p no:xdist)"]
